// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpensesService should return all expenses for user 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f824e",
      "amount": 1858.18,
      "categories": [
        {
          "__v": 0,
          "_id": "637e234fbda8050a85b1b6b7",
          "amount": 500,
          "category_id": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "owner": "61460d7354ea082ad0256749",
          "transaction_id": "624befb66ba655edad8f824e",
          "updatedAt": 2024-05-10T10:21:18.365Z,
        },
        {
          "__v": 0,
          "_id": "637e234fbda8050a85b1b6b8",
          "amount": 1358.18,
          "category_id": "623b6b91a3deba9879422fe1",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "owner": "61460d7354ea082ad0256749",
          "transaction_id": "624befb66ba655edad8f824e",
          "updatedAt": 2024-05-10T10:21:18.365Z,
        },
      ],
      "createdAt": 2024-05-10T10:21:18.363Z,
      "date": 2022-01-27T23:23:00.000Z,
      "description": "Dummy expense 80",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.363Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f82ad",
      "amount": 635.98,
      "categories": [
        {
          "__v": 0,
          "_id": "637e2371bda8050a85b1b70b",
          "amount": 635.98,
          "category_id": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "owner": "61460d7354ea082ad0256749",
          "transaction_id": "624befb96ba655edad8f82ad",
          "updatedAt": 2024-05-10T10:21:18.365Z,
        },
      ],
      "createdAt": 2024-05-10T10:21:18.363Z,
      "date": 2022-01-26T04:36:00.000Z,
      "description": "Dummy expense 99",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.363Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81d6",
      "amount": 236.55,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.363Z,
      "date": 2022-01-25T10:08:00.000Z,
      "description": "Dummy expense 56",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.363Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f82a8",
      "amount": 497.44,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.363Z,
      "date": 2022-01-24T23:32:00.000Z,
      "description": "Dummy expense 98",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.363Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8172",
      "amount": 1736.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.362Z,
      "date": 2022-01-21T02:25:00.000Z,
      "description": "Dummy expense 36",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.362Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8186",
      "amount": 1529.84,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2022-01-11T06:28:00.000Z,
      "description": "Dummy expense 40",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80cd",
      "amount": 30.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2022-01-06T01:32:00.000Z,
      "description": "Dummy expense 3",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8226",
      "amount": 1424.95,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2022-01-03T02:34:00.000Z,
      "description": "Dummy expense 72",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8294",
      "amount": 1123.36,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2021-12-31T23:48:00.000Z,
      "description": "Dummy expense 94",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8221",
      "amount": 798.8,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2021-12-19T20:51:00.000Z,
      "description": "Dummy expense 71",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81c7",
      "amount": 306.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.360Z,
      "date": 2021-12-15T16:07:00.000Z,
      "description": "Dummy expense 53",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.360Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f812c",
      "amount": 1694.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.359Z,
      "date": 2021-12-10T01:22:00.000Z,
      "description": "Dummy expense 22",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.359Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8177",
      "amount": 432.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.359Z,
      "date": 2021-12-07T20:04:00.000Z,
      "description": "Dummy expense 37",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.359Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8230",
      "amount": 1828.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-28T22:01:00.000Z,
      "description": "Dummy expense 74",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80dc",
      "amount": 1546.65,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-25T08:24:00.000Z,
      "description": "Dummy expense 6",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80e6",
      "amount": 738.41,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-22T14:25:00.000Z,
      "description": "Dummy expense 8",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f819a",
      "amount": 1649.47,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-21T02:08:00.000Z,
      "description": "Dummy expense 44",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8212",
      "amount": 223.79,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-20T20:09:00.000Z,
      "description": "Dummy expense 68",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80ff",
      "amount": 311.44,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-19T16:37:00.000Z,
      "description": "Dummy expense 13",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8217",
      "amount": 1587.61,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-18T18:16:00.000Z,
      "description": "Dummy expense 69",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8244",
      "amount": 530.83,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-17T14:09:00.000Z,
      "description": "Dummy expense 78",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f823a",
      "amount": 1980.75,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-13T06:05:00.000Z,
      "description": "Dummy expense 76",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8253",
      "amount": 879.34,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-08T15:54:00.000Z,
      "description": "Dummy expense 81",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80c8",
      "amount": 451.69,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-07T00:27:00.000Z,
      "description": "Dummy expense 2",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81cc",
      "amount": 1137.47,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-05T02:31:00.000Z,
      "description": "Dummy expense 54",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81a4",
      "amount": 656.84,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-11-03T08:57:00.000Z,
      "description": "Dummy expense 46",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f821c",
      "amount": 1848.71,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-11-01T12:52:00.000Z,
      "description": "Dummy expense 70",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f814f",
      "amount": 418.75,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-10-30T20:07:00.000Z,
      "description": "Dummy expense 29",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81c2",
      "amount": 1817.43,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-10-30T03:10:00.000Z,
      "description": "Dummy expense 52",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f828f",
      "amount": 1609.38,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-10-25T20:22:00.000Z,
      "description": "Dummy expense 93",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81e5",
      "amount": 408.59,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.355Z,
      "date": 2021-10-22T05:51:00.000Z,
      "description": "Dummy expense 59",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.355Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81ea",
      "amount": 441,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.355Z,
      "date": 2021-10-21T04:11:00.000Z,
      "description": "Dummy expense 60",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.355Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81ae",
      "amount": 547.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.354Z,
      "date": 2021-10-15T00:19:00.000Z,
      "description": "Dummy expense 48",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.354Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f826c",
      "amount": 338.17,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.354Z,
      "date": 2021-10-05T00:46:00.000Z,
      "description": "Dummy expense 86",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.354Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8267",
      "amount": 340.7,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.354Z,
      "date": 2021-10-04T15:21:00.000Z,
      "description": "Dummy expense 85",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.354Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8136",
      "amount": 729.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.353Z,
      "date": 2021-10-03T21:26:00.000Z,
      "description": "Dummy expense 24",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.353Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f8299",
      "amount": 404.78,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.353Z,
      "date": 2021-10-02T22:25:00.000Z,
      "description": "Dummy expense 95",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.353Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80d7",
      "amount": 1482.95,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-16T21:59:00.000Z,
      "description": "Dummy expense 5",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81e0",
      "amount": 849.95,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-15T12:16:00.000Z,
      "description": "Dummy expense 58",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f82a3",
      "amount": 213.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-15T00:43:00.000Z,
      "description": "Dummy expense 97",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8262",
      "amount": 324.62,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-10T20:29:00.000Z,
      "description": "Dummy expense 84",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8258",
      "amount": 468.64,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-06T22:21:00.000Z,
      "description": "Dummy expense 82",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f828a",
      "amount": 1740.36,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-09-05T15:24:00.000Z,
      "description": "Dummy expense 92",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8122",
      "amount": 45.08,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-09-04T01:17:00.000Z,
      "description": "Dummy expense 20",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8285",
      "amount": 1832.52,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-08-31T08:33:00.000Z,
      "description": "Dummy expense 91",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80be",
      "amount": 858.43,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-08-27T22:37:00.000Z,
      "description": "Dummy expense 0",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f825d",
      "amount": 285.5,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.350Z,
      "date": 2021-08-23T09:33:00.000Z,
      "description": "Dummy expense 83",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.350Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81bd",
      "amount": 805.29,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.350Z,
      "date": 2021-08-23T00:06:00.000Z,
      "description": "Dummy expense 51",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.350Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f81fe",
      "amount": 1371.57,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.349Z,
      "date": 2021-08-19T11:34:00.000Z,
      "description": "Dummy expense 64",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.349Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81ef",
      "amount": 916.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-11T02:06:00.000Z,
      "description": "Dummy expense 61",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f813b",
      "amount": 1919.98,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-08T08:15:00.000Z,
      "description": "Dummy expense 25",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81f4",
      "amount": 258.42,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-06T05:22:00.000Z,
      "description": "Dummy expense 62",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8276",
      "amount": 1284.14,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-01T10:15:00.000Z,
      "description": "Dummy expense 88",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80e1",
      "amount": 757.14,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-07-30T06:20:00.000Z,
      "description": "Dummy expense 7",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8181",
      "amount": 131.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-07-29T17:30:00.000Z,
      "description": "Dummy expense 39",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8168",
      "amount": 1715.66,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-25T23:53:00.000Z,
      "description": "Dummy expense 34",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80f0",
      "amount": 1393.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-25T03:16:00.000Z,
      "description": "Dummy expense 10",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8104",
      "amount": 1376.98,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-20T03:22:00.000Z,
      "description": "Dummy expense 14",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8113",
      "amount": 1587.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-18T14:17:00.000Z,
      "description": "Dummy expense 17",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f814a",
      "amount": 129.94,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-16T04:54:00.000Z,
      "description": "Dummy expense 28",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80fa",
      "amount": 857.14,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-07-07T19:11:00.000Z,
      "description": "Dummy expense 12",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8131",
      "amount": 504.09,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-07-06T14:41:00.000Z,
      "description": "Dummy expense 23",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80eb",
      "amount": 389.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-07-02T03:29:00.000Z,
      "description": "Dummy expense 9",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f823f",
      "amount": 113.26,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-30T03:28:00.000Z,
      "description": "Dummy expense 77",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8280",
      "amount": 1502.97,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-28T23:10:00.000Z,
      "description": "Dummy expense 90",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8271",
      "amount": 1510.21,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-28T16:10:00.000Z,
      "description": "Dummy expense 87",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f8208",
      "amount": 392.66,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-26T07:10:00.000Z,
      "description": "Dummy expense 66",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81b3",
      "amount": 490.7,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-20T06:36:00.000Z,
      "description": "Dummy expense 49",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f822b",
      "amount": 1474.48,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-12T06:38:00.000Z,
      "description": "Dummy expense 73",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8235",
      "amount": 92.93,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-10T10:12:00.000Z,
      "description": "Dummy expense 75",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81d1",
      "amount": 1929.86,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-06-02T20:52:00.000Z,
      "description": "Dummy expense 55",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8109",
      "amount": 1909.89,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-29T18:15:00.000Z,
      "description": "Dummy expense 15",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f811d",
      "amount": 410.89,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-29T11:32:00.000Z,
      "description": "Dummy expense 19",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f8145",
      "amount": 1559.93,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-27T17:02:00.000Z,
      "description": "Dummy expense 27",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f819f",
      "amount": 125.06,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-27T08:51:00.000Z,
      "description": "Dummy expense 45",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f8203",
      "amount": 1236.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-25T16:07:00.000Z,
      "description": "Dummy expense 65",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8159",
      "amount": 1403.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-18T13:55:00.000Z,
      "description": "Dummy expense 31",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f81f9",
      "amount": 77.5,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-17T10:11:00.000Z,
      "description": "Dummy expense 63",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81a9",
      "amount": 79.21,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-17T01:26:00.000Z,
      "description": "Dummy expense 47",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81db",
      "amount": 173.64,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-12T12:26:00.000Z,
      "description": "Dummy expense 57",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8249",
      "amount": 1895.52,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-08T20:19:00.000Z,
      "description": "Dummy expense 79",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f8195",
      "amount": 1983.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-01T18:50:00.000Z,
      "description": "Dummy expense 43",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f827b",
      "amount": 765.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-04-29T08:01:00.000Z,
      "description": "Dummy expense 89",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80c3",
      "amount": 400.2,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-28T02:57:00.000Z,
      "description": "Dummy expense 1",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80d2",
      "amount": 175.49,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-13T02:37:00.000Z,
      "description": "Dummy expense 4",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f820d",
      "amount": 974.77,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-11T12:10:00.000Z,
      "description": "Dummy expense 67",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f8190",
      "amount": 45.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.339Z,
      "date": 2021-04-09T03:56:00.000Z,
      "description": "Dummy expense 42",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.339Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80f5",
      "amount": 656.59,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.338Z,
      "date": 2021-04-05T21:25:00.000Z,
      "description": "Dummy expense 11",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.338Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f810e",
      "amount": 1003.04,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.338Z,
      "date": 2021-04-03T13:10:00.000Z,
      "description": "Dummy expense 16",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.338Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81b8",
      "amount": 1568.19,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-27T05:24:00.000Z,
      "description": "Dummy expense 50",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f829e",
      "amount": 608.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-26T23:47:00.000Z,
      "description": "Dummy expense 96",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8154",
      "amount": 1832.69,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-25T22:20:00.000Z,
      "description": "Dummy expense 30",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f817c",
      "amount": 1368.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-21T11:16:00.000Z,
      "description": "Dummy expense 38",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8127",
      "amount": 1603.86,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-20T22:23:00.000Z,
      "description": "Dummy expense 21",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f818b",
      "amount": 1411.5,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-05T02:52:00.000Z,
      "description": "Dummy expense 41",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8163",
      "amount": 1367.65,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-04T01:59:00.000Z,
      "description": "Dummy expense 33",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f816d",
      "amount": 703.68,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-01T22:26:00.000Z,
      "description": "Dummy expense 35",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f815e",
      "amount": 118.27,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.335Z,
      "date": 2021-03-01T09:31:00.000Z,
      "description": "Dummy expense 32",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.335Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8118",
      "amount": 776.71,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.335Z,
      "date": 2021-02-21T17:31:00.000Z,
      "description": "Dummy expense 18",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.335Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f8140",
      "amount": 418.64,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.335Z,
      "date": 2021-02-21T02:48:00.000Z,
      "description": "Dummy expense 26",
      "fromAccount": "61460de154ea082ad0256786",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.335Z,
      "user": "61460d7354ea082ad0256749",
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 100,
  "totalPageCount": 1,
  "totalRowCount": 100,
}
`;

exports[`ExpensesService should return all expenses for user for specified account types 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f82ad",
      "amount": 635.98,
      "categories": [
        {
          "__v": 0,
          "_id": "637e2371bda8050a85b1b70b",
          "amount": 635.98,
          "category_id": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "owner": "61460d7354ea082ad0256749",
          "transaction_id": "624befb96ba655edad8f82ad",
          "updatedAt": 2024-05-10T10:21:18.365Z,
        },
      ],
      "createdAt": 2024-05-10T10:21:18.363Z,
      "date": 2022-01-26T04:36:00.000Z,
      "description": "Dummy expense 99",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.363Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8172",
      "amount": 1736.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.362Z,
      "date": 2022-01-21T02:25:00.000Z,
      "description": "Dummy expense 36",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.362Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80cd",
      "amount": 30.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2022-01-06T01:32:00.000Z,
      "description": "Dummy expense 3",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8226",
      "amount": 1424.95,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2022-01-03T02:34:00.000Z,
      "description": "Dummy expense 72",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8294",
      "amount": 1123.36,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2021-12-31T23:48:00.000Z,
      "description": "Dummy expense 94",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8221",
      "amount": 798.8,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.361Z,
      "date": 2021-12-19T20:51:00.000Z,
      "description": "Dummy expense 71",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.361Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81c7",
      "amount": 306.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.360Z,
      "date": 2021-12-15T16:07:00.000Z,
      "description": "Dummy expense 53",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.360Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f812c",
      "amount": 1694.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.359Z,
      "date": 2021-12-10T01:22:00.000Z,
      "description": "Dummy expense 22",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.359Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8177",
      "amount": 432.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.359Z,
      "date": 2021-12-07T20:04:00.000Z,
      "description": "Dummy expense 37",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.359Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8230",
      "amount": 1828.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-28T22:01:00.000Z,
      "description": "Dummy expense 74",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80dc",
      "amount": 1546.65,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-25T08:24:00.000Z,
      "description": "Dummy expense 6",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f819a",
      "amount": 1649.47,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-21T02:08:00.000Z,
      "description": "Dummy expense 44",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f8212",
      "amount": 223.79,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-20T20:09:00.000Z,
      "description": "Dummy expense 68",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80ff",
      "amount": 311.44,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-19T16:37:00.000Z,
      "description": "Dummy expense 13",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8244",
      "amount": 530.83,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.358Z,
      "date": 2021-11-17T14:09:00.000Z,
      "description": "Dummy expense 78",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.358Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f823a",
      "amount": 1980.75,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-13T06:05:00.000Z,
      "description": "Dummy expense 76",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8253",
      "amount": 879.34,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-08T15:54:00.000Z,
      "description": "Dummy expense 81",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80c8",
      "amount": 451.69,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-07T00:27:00.000Z,
      "description": "Dummy expense 2",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81cc",
      "amount": 1137.47,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.357Z,
      "date": 2021-11-05T02:31:00.000Z,
      "description": "Dummy expense 54",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.357Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81a4",
      "amount": 656.84,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-11-03T08:57:00.000Z,
      "description": "Dummy expense 46",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb46ba655edad8f821c",
      "amount": 1848.71,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-11-01T12:52:00.000Z,
      "description": "Dummy expense 70",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f814f",
      "amount": 418.75,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-10-30T20:07:00.000Z,
      "description": "Dummy expense 29",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81c2",
      "amount": 1817.43,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.356Z,
      "date": 2021-10-30T03:10:00.000Z,
      "description": "Dummy expense 52",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.356Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81e5",
      "amount": 408.59,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.355Z,
      "date": 2021-10-22T05:51:00.000Z,
      "description": "Dummy expense 59",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.355Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81ea",
      "amount": 441,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.355Z,
      "date": 2021-10-21T04:11:00.000Z,
      "description": "Dummy expense 60",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.355Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81ae",
      "amount": 547.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.354Z,
      "date": 2021-10-15T00:19:00.000Z,
      "description": "Dummy expense 48",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.354Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8267",
      "amount": 340.7,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.354Z,
      "date": 2021-10-04T15:21:00.000Z,
      "description": "Dummy expense 85",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.354Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8136",
      "amount": 729.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.353Z,
      "date": 2021-10-03T21:26:00.000Z,
      "description": "Dummy expense 24",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.353Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f8299",
      "amount": 404.78,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.353Z,
      "date": 2021-10-02T22:25:00.000Z,
      "description": "Dummy expense 95",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.353Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81e0",
      "amount": 849.95,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-15T12:16:00.000Z,
      "description": "Dummy expense 58",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f82a3",
      "amount": 213.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-15T00:43:00.000Z,
      "description": "Dummy expense 97",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8262",
      "amount": 324.62,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-10T20:29:00.000Z,
      "description": "Dummy expense 84",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8258",
      "amount": 468.64,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.352Z,
      "date": 2021-09-06T22:21:00.000Z,
      "description": "Dummy expense 82",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.352Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f828a",
      "amount": 1740.36,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-09-05T15:24:00.000Z,
      "description": "Dummy expense 92",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8122",
      "amount": 45.08,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-09-04T01:17:00.000Z,
      "description": "Dummy expense 20",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8285",
      "amount": 1832.52,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-08-31T08:33:00.000Z,
      "description": "Dummy expense 91",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80be",
      "amount": 858.43,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.351Z,
      "date": 2021-08-27T22:37:00.000Z,
      "description": "Dummy expense 0",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.351Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81bd",
      "amount": 805.29,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.350Z,
      "date": 2021-08-23T00:06:00.000Z,
      "description": "Dummy expense 51",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.350Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f81fe",
      "amount": 1371.57,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.349Z,
      "date": 2021-08-19T11:34:00.000Z,
      "description": "Dummy expense 64",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.349Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81ef",
      "amount": 916.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-11T02:06:00.000Z,
      "description": "Dummy expense 61",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f813b",
      "amount": 1919.98,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-08T08:15:00.000Z,
      "description": "Dummy expense 25",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb26ba655edad8f81f4",
      "amount": 258.42,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-06T05:22:00.000Z,
      "description": "Dummy expense 62",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8276",
      "amount": 1284.14,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-08-01T10:15:00.000Z,
      "description": "Dummy expense 88",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f8181",
      "amount": 131.18,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.346Z,
      "date": 2021-07-29T17:30:00.000Z,
      "description": "Dummy expense 39",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.346Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8168",
      "amount": 1715.66,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-25T23:53:00.000Z,
      "description": "Dummy expense 34",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80f0",
      "amount": 1393.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-25T03:16:00.000Z,
      "description": "Dummy expense 10",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8104",
      "amount": 1376.98,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-20T03:22:00.000Z,
      "description": "Dummy expense 14",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8113",
      "amount": 1587.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-18T14:17:00.000Z,
      "description": "Dummy expense 17",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f814a",
      "amount": 129.94,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.345Z,
      "date": 2021-07-16T04:54:00.000Z,
      "description": "Dummy expense 28",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.345Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80fa",
      "amount": 857.14,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-07-07T19:11:00.000Z,
      "description": "Dummy expense 12",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80eb",
      "amount": 389.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-07-02T03:29:00.000Z,
      "description": "Dummy expense 9",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f823f",
      "amount": 113.26,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-30T03:28:00.000Z,
      "description": "Dummy expense 77",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f8280",
      "amount": 1502.97,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-28T23:10:00.000Z,
      "description": "Dummy expense 90",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb76ba655edad8f8271",
      "amount": 1510.21,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.344Z,
      "date": 2021-06-28T16:10:00.000Z,
      "description": "Dummy expense 87",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.344Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f8208",
      "amount": 392.66,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-26T07:10:00.000Z,
      "description": "Dummy expense 66",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81b3",
      "amount": 490.7,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-20T06:36:00.000Z,
      "description": "Dummy expense 49",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f822b",
      "amount": 1474.48,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-12T06:38:00.000Z,
      "description": "Dummy expense 73",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb56ba655edad8f8235",
      "amount": 92.93,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.343Z,
      "date": 2021-06-10T10:12:00.000Z,
      "description": "Dummy expense 75",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.343Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb16ba655edad8f81d1",
      "amount": 1929.86,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-06-02T20:52:00.000Z,
      "description": "Dummy expense 55",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8109",
      "amount": 1909.89,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-29T18:15:00.000Z,
      "description": "Dummy expense 15",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f811d",
      "amount": 410.89,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-29T11:32:00.000Z,
      "description": "Dummy expense 19",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befac6ba655edad8f8145",
      "amount": 1559.93,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-27T17:02:00.000Z,
      "description": "Dummy expense 27",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f819f",
      "amount": 125.06,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-27T08:51:00.000Z,
      "description": "Dummy expense 45",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f8203",
      "amount": 1236.25,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-25T16:07:00.000Z,
      "description": "Dummy expense 65",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8159",
      "amount": 1403.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-18T13:55:00.000Z,
      "description": "Dummy expense 31",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f81f9",
      "amount": 77.5,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.342Z,
      "date": 2021-05-17T10:11:00.000Z,
      "description": "Dummy expense 63",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.342Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb66ba655edad8f8249",
      "amount": 1895.52,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-08T20:19:00.000Z,
      "description": "Dummy expense 79",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f8195",
      "amount": 1983.23,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-05-01T18:50:00.000Z,
      "description": "Dummy expense 43",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb86ba655edad8f827b",
      "amount": 765.58,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.341Z,
      "date": 2021-04-29T08:01:00.000Z,
      "description": "Dummy expense 89",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.341Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa76ba655edad8f80c3",
      "amount": 400.2,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-28T02:57:00.000Z,
      "description": "Dummy expense 1",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa86ba655edad8f80d2",
      "amount": 175.49,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-13T02:37:00.000Z,
      "description": "Dummy expense 4",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb36ba655edad8f820d",
      "amount": 974.77,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.340Z,
      "date": 2021-04-11T12:10:00.000Z,
      "description": "Dummy expense 67",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.340Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befa96ba655edad8f80f5",
      "amount": 656.59,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.338Z,
      "date": 2021-04-05T21:25:00.000Z,
      "description": "Dummy expense 11",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.338Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f810e",
      "amount": 1003.04,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.338Z,
      "date": 2021-04-03T13:10:00.000Z,
      "description": "Dummy expense 16",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.338Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb06ba655edad8f81b8",
      "amount": 1568.19,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-27T05:24:00.000Z,
      "description": "Dummy expense 50",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befb96ba655edad8f829e",
      "amount": 608.11,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-26T23:47:00.000Z,
      "description": "Dummy expense 96",
      "fromAccount": "61460da354ea082ad025676b",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8154",
      "amount": 1832.69,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-25T22:20:00.000Z,
      "description": "Dummy expense 30",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f817c",
      "amount": 1368.87,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-21T11:16:00.000Z,
      "description": "Dummy expense 38",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befab6ba655edad8f8127",
      "amount": 1603.86,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.337Z,
      "date": 2021-03-20T22:23:00.000Z,
      "description": "Dummy expense 21",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.337Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaf6ba655edad8f818b",
      "amount": 1411.5,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-05T02:52:00.000Z,
      "description": "Dummy expense 41",
      "fromAccount": "61460db554ea082ad0256774",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f8163",
      "amount": 1367.65,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-04T01:59:00.000Z,
      "description": "Dummy expense 33",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befae6ba655edad8f816d",
      "amount": 703.68,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.336Z,
      "date": 2021-03-01T22:26:00.000Z,
      "description": "Dummy expense 35",
      "fromAccount": "61460dd554ea082ad025677d",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.336Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befad6ba655edad8f815e",
      "amount": 118.27,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.335Z,
      "date": 2021-03-01T09:31:00.000Z,
      "description": "Dummy expense 32",
      "fromAccount": "61460d8554ea082ad0256759",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.335Z,
      "user": "61460d7354ea082ad0256749",
    },
    {
      "__v": 0,
      "_id": "624befaa6ba655edad8f8118",
      "amount": 776.71,
      "categories": [],
      "createdAt": 2024-05-10T10:21:18.335Z,
      "date": 2021-02-21T17:31:00.000Z,
      "description": "Dummy expense 18",
      "fromAccount": "61460d9454ea082ad0256762",
      "toAccount": null,
      "updatedAt": 2024-05-10T10:21:18.335Z,
      "user": "61460d7354ea082ad0256749",
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 84,
  "totalPageCount": 1,
  "totalRowCount": 84,
}
`;

exports[`ExpensesService should return monthly summaries for user 1`] = `
[
  {
    "_id": {
      "month": 1,
      "year": 2023,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 3000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 12,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 3000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 11,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 3000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 10,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 2000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 9,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 2000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 8,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 4000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 7,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 2000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 6,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 3000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 5,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 1100,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 4,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 4000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 3,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 3000,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 2,
      "year": 2022,
    },
    "count": 0,
    "expenseAmount": 0,
    "expensesCount": 0,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 0,
    "totalCount": 0,
    "transferAmount": 2500,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 1,
      "year": 2022,
    },
    "count": 8,
    "expenseAmount": 7950.06,
    "expensesCount": 8,
    "incomeAmount": 17215.3,
    "incomesCount": 10,
    "totalAmount": 7950.06,
    "totalCount": 8,
    "transferAmount": 10952.2,
    "transferCount": 10,
  },
  {
    "_id": {
      "month": 12,
      "year": 2021,
    },
    "count": 5,
    "expenseAmount": 4355.84,
    "expensesCount": 5,
    "incomeAmount": 6652.5199999999995,
    "incomesCount": 5,
    "totalAmount": 4355.84,
    "totalCount": 5,
    "transferAmount": 11532.26,
    "transferCount": 12,
  },
  {
    "_id": {
      "month": 11,
      "year": 2021,
    },
    "count": 14,
    "expenseAmount": 15371.25,
    "expensesCount": 14,
    "incomeAmount": 5445,
    "incomesCount": 5,
    "totalAmount": 15371.25,
    "totalCount": 14,
    "transferAmount": 7817.15,
    "transferCount": 8,
  },
  {
    "_id": {
      "month": 10,
      "year": 2021,
    },
    "count": 10,
    "expenseAmount": 7055.56,
    "expensesCount": 10,
    "incomeAmount": 13284.26,
    "incomesCount": 11,
    "totalAmount": 7055.56,
    "totalCount": 10,
    "transferAmount": 2563.43,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 9,
      "year": 2021,
    },
    "count": 7,
    "expenseAmount": 5124.78,
    "expensesCount": 7,
    "incomeAmount": 5064.46,
    "incomesCount": 5,
    "totalAmount": 5124.78,
    "totalCount": 7,
    "transferAmount": 11750.84,
    "transferCount": 9,
  },
  {
    "_id": {
      "month": 8,
      "year": 2021,
    },
    "count": 9,
    "expenseAmount": 9531.96,
    "expensesCount": 9,
    "incomeAmount": 10400.8,
    "incomesCount": 10,
    "totalAmount": 9531.96,
    "totalCount": 9,
    "transferAmount": 10606.59,
    "transferCount": 10,
  },
  {
    "_id": {
      "month": 7,
      "year": 2021,
    },
    "count": 10,
    "expenseAmount": 8841.58,
    "expensesCount": 10,
    "incomeAmount": 13323.02,
    "incomesCount": 11,
    "totalAmount": 8841.58,
    "totalCount": 10,
    "transferAmount": 6480.56,
    "transferCount": 7,
  },
  {
    "_id": {
      "month": 6,
      "year": 2021,
    },
    "count": 8,
    "expenseAmount": 7507.07,
    "expensesCount": 8,
    "incomeAmount": 6793.93,
    "incomesCount": 8,
    "totalAmount": 7507.07,
    "totalCount": 8,
    "transferAmount": 6818.530000000001,
    "transferCount": 4,
  },
  {
    "_id": {
      "month": 5,
      "year": 2021,
    },
    "count": 11,
    "expenseAmount": 10854.23,
    "expensesCount": 11,
    "incomeAmount": 11683.3,
    "incomesCount": 11,
    "totalAmount": 10854.23,
    "totalCount": 11,
    "transferAmount": 1314.4,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 4,
      "year": 2021,
    },
    "count": 7,
    "expenseAmount": 4021.54,
    "expensesCount": 7,
    "incomeAmount": 8812.19,
    "incomesCount": 9,
    "totalAmount": 4021.54,
    "totalCount": 7,
    "transferAmount": 9073.69,
    "transferCount": 9,
  },
  {
    "_id": {
      "month": 3,
      "year": 2021,
    },
    "count": 9,
    "expenseAmount": 10582.82,
    "expensesCount": 9,
    "incomeAmount": 9052.28,
    "incomesCount": 11,
    "totalAmount": 10582.82,
    "totalCount": 9,
    "transferAmount": 12179,
    "transferCount": 11,
  },
  {
    "_id": {
      "month": 2,
      "year": 2021,
    },
    "count": 2,
    "expenseAmount": 1195.35,
    "expensesCount": 2,
    "incomeAmount": 6109.97,
    "incomesCount": 5,
    "totalAmount": 1195.35,
    "totalCount": 2,
    "transferAmount": 4277.92,
    "transferCount": 4,
  },
]
`;

exports[`ExpensesService should return monthly summaries for user for specified account types 1`] = `
[
  {
    "_id": {
      "month": 1,
      "year": 2023,
    },
    "count": 2,
    "expenseAmount": 3000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 3000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 12,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 3000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 3000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 11,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 3000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 3000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 10,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 2000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 2000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 9,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 2000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 2000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 8,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 4000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 4000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 7,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 2000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 2000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 6,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 3000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 3000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 5,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 1100,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 1100,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 4,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 4000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 4000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 3,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 3000,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 3000,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 2,
      "year": 2022,
    },
    "count": 2,
    "expenseAmount": 2500,
    "expensesCount": 2,
    "incomeAmount": 3500,
    "incomesCount": 1,
    "totalAmount": 2500,
    "totalCount": 2,
    "transferAmount": 0,
    "transferCount": 0,
  },
  {
    "_id": {
      "month": 1,
      "year": 2022,
    },
    "count": 8,
    "expenseAmount": 8184.9,
    "expensesCount": 8,
    "incomeAmount": 17653.42,
    "incomesCount": 11,
    "totalAmount": 8184.9,
    "totalCount": 8,
    "transferAmount": 3,
    "transferCount": 3,
  },
  {
    "_id": {
      "month": 12,
      "year": 2021,
    },
    "count": 7,
    "expenseAmount": 6225.77,
    "expensesCount": 7,
    "incomeAmount": 7558.29,
    "incomesCount": 7,
    "totalAmount": 6225.77,
    "totalCount": 7,
    "transferAmount": 8,
    "transferCount": 8,
  },
  {
    "_id": {
      "month": 11,
      "year": 2021,
    },
    "count": 12,
    "expenseAmount": 13045.23,
    "expensesCount": 12,
    "incomeAmount": 7390.25,
    "incomesCount": 7,
    "totalAmount": 13045.23,
    "totalCount": 12,
    "transferAmount": 6,
    "transferCount": 6,
  },
  {
    "_id": {
      "month": 10,
      "year": 2021,
    },
    "count": 9,
    "expenseAmount": 6286.61,
    "expensesCount": 9,
    "incomeAmount": 8980.27,
    "incomesCount": 8,
    "totalAmount": 6286.61,
    "totalCount": 9,
    "transferAmount": 1,
    "transferCount": 1,
  },
  {
    "_id": {
      "month": 9,
      "year": 2021,
    },
    "count": 8,
    "expenseAmount": 5899.93,
    "expensesCount": 8,
    "incomeAmount": 5345.82,
    "incomesCount": 5,
    "totalAmount": 5899.93,
    "totalCount": 8,
    "transferAmount": 6,
    "transferCount": 6,
  },
  {
    "_id": {
      "month": 8,
      "year": 2021,
    },
    "count": 9,
    "expenseAmount": 10895.49,
    "expensesCount": 9,
    "incomeAmount": 11226.63,
    "incomesCount": 11,
    "totalAmount": 10895.49,
    "totalCount": 9,
    "transferAmount": 8,
    "transferCount": 8,
  },
  {
    "_id": {
      "month": 7,
      "year": 2021,
    },
    "count": 10,
    "expenseAmount": 8628.48,
    "expensesCount": 10,
    "incomeAmount": 12469.16,
    "incomesCount": 10,
    "totalAmount": 8628.48,
    "totalCount": 10,
    "transferAmount": 5,
    "transferCount": 5,
  },
  {
    "_id": {
      "month": 6,
      "year": 2021,
    },
    "count": 8,
    "expenseAmount": 7507.07,
    "expensesCount": 8,
    "incomeAmount": 10683.81,
    "incomesCount": 10,
    "totalAmount": 7507.07,
    "totalCount": 8,
    "transferAmount": 2,
    "transferCount": 2,
  },
  {
    "_id": {
      "month": 5,
      "year": 2021,
    },
    "count": 10,
    "expenseAmount": 11252.460000000001,
    "expensesCount": 10,
    "incomeAmount": 11683.3,
    "incomesCount": 11,
    "totalAmount": 11252.460000000001,
    "totalCount": 10,
    "transferAmount": 1,
    "transferCount": 1,
  },
  {
    "_id": {
      "month": 4,
      "year": 2021,
    },
    "count": 6,
    "expenseAmount": 3975.67,
    "expensesCount": 6,
    "incomeAmount": 9365.33,
    "incomesCount": 10,
    "totalAmount": 3975.67,
    "totalCount": 6,
    "transferAmount": 7,
    "transferCount": 7,
  },
  {
    "_id": {
      "month": 3,
      "year": 2021,
    },
    "count": 11,
    "expenseAmount": 12305.44,
    "expensesCount": 11,
    "incomeAmount": 8759.15,
    "incomesCount": 11,
    "totalAmount": 12305.44,
    "totalCount": 11,
    "transferAmount": 6,
    "transferCount": 6,
  },
  {
    "_id": {
      "month": 2,
      "year": 2021,
    },
    "count": 2,
    "expenseAmount": 2487.74,
    "expensesCount": 2,
    "incomeAmount": 6240.9800000000005,
    "incomesCount": 5,
    "totalAmount": 2487.74,
    "totalCount": 2,
    "transferAmount": 2,
    "transferCount": 2,
  },
]
`;

exports[`ExpensesService should return one expense for user 1`] = `
{
  "__v": 0,
  "_id": "624befb66ba655edad8f824e",
  "amount": 1858.18,
  "categories": [
    {
      "__v": 0,
      "_id": "637e234fbda8050a85b1b6b7",
      "amount": 500,
      "category_id": "623b58ada3deba9879422fbf",
      "createdAt": 2024-05-10T10:21:18.365Z,
      "description": "",
      "owner": "61460d7354ea082ad0256749",
      "transaction_id": "624befb66ba655edad8f824e",
      "updatedAt": 2024-05-10T10:21:18.365Z,
    },
    {
      "__v": 0,
      "_id": "637e234fbda8050a85b1b6b8",
      "amount": 1358.18,
      "category_id": "623b6b91a3deba9879422fe1",
      "createdAt": 2024-05-10T10:21:18.365Z,
      "description": "",
      "owner": "61460d7354ea082ad0256749",
      "transaction_id": "624befb66ba655edad8f824e",
      "updatedAt": 2024-05-10T10:21:18.365Z,
    },
  ],
  "createdAt": 2024-05-10T10:21:18.363Z,
  "date": 2022-01-27T23:23:00.000Z,
  "description": "Dummy expense 80",
  "fromAccount": "61460de154ea082ad0256786",
  "toAccount": null,
  "updatedAt": 2024-05-10T10:21:18.363Z,
  "user": "61460d7354ea082ad0256749",
}
`;
